# cza

./: .biome.jsonc  .dprint.jsonc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bun.lockb  hk.pkl  mise.toml  npm-package.json  release-plz.toml  setup
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  template_request.yml
.github/workflows/: docs.yml  main.yml  release.yml  v-release.yml
cli/: CHANGELOG.md  Cargo.toml  templates.toml
cli/src/: cmd.rs  config.rs  lib.rs  main.rs  output.rs  template.rs  utils.rs
cli/src/cmd/: config.rs  list.rs  new.rs  update.rs
cli/src/config/: development.rs  post_generation.rs  user.rs
cli/tests/: basic_tests.rs  integration_tests.rs  mod.rs
docs/: configuration.md
src/: cmd.rs
src/cmd/: update.rs
templates/circom/: README.md  bun.lockb  mise.toml  package.json
templates/circom/.mise-tasks/: build.verifier  deploy  setup
templates/circom/circuits/: README.md  package.json
templates/circom/circuits/tests/: sha256.test.ts
templates/circom/contracts/src/: Verifier_sha256_32.sol
templates/circom/web/: index.html  package.json  wagmi.config.ts
templates/circom/web/public/: sha256_32.wasm  sha256_32.zkey
templates/circom/web/src/: App.tsx
templates/circom/web/src/components/: Header.tsx
templates/circom/web/src/components/Proof/: Prove.tsx  Verify.tsx  index.tsx
templates/circom/web/src/lib/: bigintify.ts  config.ts
templates/circom/web/src/lib/circuits/: sha256.ts
templates/circom/web/src/state/: atoms.ts
