[workspace]
members = ["cli"]
package = { edition = "2021" }
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
cargo-generate = "0.21"
clap = { version = "4.5.29", features = ["derive"] }
console = "0.15"
dirs = "6.0"
env_logger = "0.11"
log = "0.4"
predicates = "3.0"
self_update = "0.41"
serde = { version = "1.0", features = ["derive"] }
snapbox = "0.6"
tempfile = "3.8"
toml = "0.8"
