[workspace]
members = ["cli"]
package = { edition = "2021" }
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
cargo-generate = { version = "0.21", features = ["vendored-openssl"] }
clap = { version = "4.5.29", features = ["derive"] }
console = "0.15"
dirs = "6.0"
env_logger = "0.11"
log = "0.4"
predicates = "3.0"
self_update = { version = "0.41", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snapbox = "0.6"
tempfile = "3.8"
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# npm package configuration
npm-package = "create-zk-app"
# Enable npm publishing
publish-jobs = ["npm"]
# npm scope (optional, but commonly used for organizations)
# npm-scope = "@sripwoud"
# Tag namespace for matching release tags
tag-namespace = "v"
# Allow CI files to have formatting differences
allow-dirty = ["ci"]

# Binary aliases - provides both 'cza' and 'create-zk-app' commands
[workspace.metadata.dist.bin-aliases]
cza = ["create-zk-app"]
