[package]
name = "cza"
version = "0.1.0-alpha.4"
authors = ["sripwoud"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
keywords = ["cli", "template", "zero-knowledge", "noir", "cairo"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sripwoud/cza"
description = "CLI tool for scaffolding zero-knowledge application projects"

[[bin]]
name = "cza"
path = "src/main.rs"

[features]
integration = []

[dependencies]
anyhow.workspace = true
cargo-generate.workspace = true
clap.workspace = true
console.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
env_logger.workspace = true
predicates.workspace = true
snapbox.workspace = true
tempfile.workspace = true
